--- a/resources/users.css
+++ b/resources/users.css
@@ -1,3 +1,19 @@
+.uzytkownik
+{
+    height: 100px;
+    overflow: auto;
+}
+tr:nth-child(even){
+    background-color: #777777;
+}
+tr:nth-child(odd){
+    background-color: #cccccc;
+}
+th{
+    
+    
+}
+
 .row{
     position: relative;
     border: solid;
@@ -26,9 +42,13 @@ h2{
     font-size: 17px;
 }
 
+
 .row2{
 
 }
+
+
+
 .form-group{
 
 
@@ -58,27 +78,27 @@ h2{
     color: white;
     display: none;
     padding: 100px 20px;
-    height: 10000000 px;
-    width: auto;
+    height: 100%;
 }
 
 
-.samochody {
+.samochod {
     border: none;
     padding: 5px;
     font: 24px/36px sans-serif;
     width: 200px;
-    height: 200px;
-    overflow: scroll;
+    height: 430px;
+    margin-right: 50%;
+    /*overflow: scroll;*/
 }
 .uzytkownik{
-    height: 100px;
+    height: 400px;
     overflow: auto;
 }
 
 
 
-#Home {background-color: #555;}
-#News {background-color: #555;}
-#Contact {background-color: #555;}
-#About {background-color: #555;}
+#Home {background-color: #333;}
+#News {background-color: #333;}
+#Contact {background-color: #333;}
+#About {background-color: #333;}
